# QR-Code

./: LICENSE.txt  README.md  generate.py  pyproject.toml
