[tool.poetry]
name = "qr-code"
version = "0.1.0"
description = ""
authors = ["galagain <calvin@galagain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
qrcode = {extras = ["pil"], version = "^7.4.2"}
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

